[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.4.10"
sklearn = "^0.0"
pandas = "^1.4.2"
nltk = "^3.7"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
